# cernvm-cli

./: .gitignore  CMakeLists.txt  README.md  prepare-vs2012-vt100_xp.bat
src/: CLIInteraction.cpp  CLIInteraction.h  CLIProgressFeedback.cpp  CLIProgressFeedback.h  cernvm-cli.cpp  cli-utils.cpp  cli-utils.h
